# rivermax-dev-kit

./: .gitignore  .gitmessage  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile.am  README.md  configure.ac  rmax_apps_lib.sln
apps/: CMakeLists.txt  Makefile.am  rmax_base_app.cpp  rmax_base_app.h  rmax_receiver_base.cpp  rmax_receiver_base.h
apps/rmax_ipmx_sender/: CMakeLists.txt  rmax_ipmx_sender.cpp  rmax_ipmx_sender.h
apps/rmax_ipo_receiver/: CMakeLists.txt  Makefile.am  rmax_ipo_receiver.cpp  rmax_ipo_receiver.h  rmax_ipo_receiver.vcxproj
apps/rmax_latency/: CMakeLists.txt  rmax_latency.cpp  rmax_latency.h
apps/rmax_rtp_receiver/: CMakeLists.txt  rmax_rtp_receiver.cpp  rmax_rtp_receiver.h
apps/rmax_xstream_generic_sender/: CMakeLists.txt  Makefile.am  rmax_xstream_generic_sender.cpp  rmax_xstream_generic_sender.h  rmax_xstream_generic_sender.vcxproj
apps/rmax_xstream_media_sender/: CMakeLists.txt  Makefile.am  rmax_xstream_media_sender.cpp  rmax_xstream_media_sender.h  rmax_xstream_media_sender.vcxproj
docs/: CMakeLists.txt  Doxyfile.in  doxygen.config.in
io_node/: CMakeLists.txt  Makefile.am  io_node.h
io_node/misc/: CMakeLists.txt  generic_latency_io_node.cpp  generic_latency_io_node.h  latency_io_node.cpp  latency_io_node.h  media_latency_io_node.cpp  media_latency_io_node.h
io_node/receivers/: CMakeLists.txt  ipo_receiver_io_node.cpp  ipo_receiver_io_node.h  rtp_receiver_io_node.cpp  rtp_receiver_io_node.h
io_node/senders/: CMakeLists.txt  generic_sender_io_node.cpp  generic_sender_io_node.h  ipmx_sender_io_node.cpp  ipmx_sender_io_node.h  media_sender_io_node.cpp  media_sender_io_node.h  rtp_video_send_stream.cpp  rtp_video_send_stream.h
lib/: CMakeLists.txt  Makefile.am  rmax_apps_lib.vcxproj  rmax_apps_lib_facade.cpp  rmax_apps_lib_facade.h
lib/core/: CMakeLists.txt
lib/core/chunk/: CMakeLists.txt  chunk.h  chunk_interface.h  generic_chunk.cpp  generic_chunk.h  media_chunk.cpp  media_chunk.h  receive_chunk.cpp  receive_chunk.h
lib/core/flow/: CMakeLists.txt  flow.cpp  flow.h
lib/core/stream/: CMakeLists.txt  aggregate_stream_interface.cpp  aggregate_stream_interface.h  single_stream_interface.cpp  single_stream_interface.h  stream.h  stream_interface.cpp  stream_interface.h
lib/services/: CMakeLists.txt
lib/services/buffer_management/: CMakeLists.txt  buffer_management.h  buffer_writer_interface.h  checksum_buffer_writer.cpp  checksum_buffer_writer.h  generic_buffer_writer.cpp  generic_buffer_writer.h
lib/services/cli/: CMakeLists.txt  cli.h  cli_manager.cpp  cli_manager.h  options.cpp  options.h  validators.cpp  validators.h
lib/services/error_handling/: CMakeLists.txt  error_handling.h  exceptions.h  return_status.h  signal_handler.cpp  signal_handler.h
lib/services/memory_management/: CMakeLists.txt  gpu_memory_allocator.cpp  gpu_memory_allocator.h  huge_pages_memory_allocator.cpp  huge_pages_memory_allocator.h  memory_allocator_interface.cpp  memory_allocator_interface.h  memory_management.h  new_memory_allocator.cpp  new_memory_allocator.h
lib/services/statistics/: CMakeLists.txt  statistics_reader.cpp  statistics_reader.h
lib/services/utils/: CMakeLists.txt  clock.cpp  clock.h  cpu.cpp  cpu.h  defs.h  gpu_manager.cpp  gpu_manager.h  rtp_video.cpp  rtp_video.h  utils.h
source/: CMakeLists.txt  facade.cpp
source/apps/: CMakeLists.txt  rmax_base_app.cpp  rmax_base_memory_strategy.cpp  rmax_receiver_base.cpp
source/apps/cmake/: RivermaxDevKitAppSetup.cmake
source/apps/rmax_ipmx_receiver/: CMakeLists.txt  ipmx_stream_timeline_tracker.cpp  rmax_ipmx_receiver.cpp  rmax_ipmx_receiver_main.cpp
source/apps/rmax_ipmx_sender/: CMakeLists.txt  rmax_ipmx_sender.cpp  rmax_ipmx_sender_main.cpp
source/apps/rmax_ipo_receiver/: CMakeLists.txt  rmax_ipo_receiver.cpp  rmax_ipo_receiver_main.cpp
source/apps/rmax_latency/: CMakeLists.txt  rmax_latency.cpp  rmax_latency_main.cpp
source/apps/rmax_rtp_receiver/: CMakeLists.txt  rmax_rtp_receiver.cpp  rmax_rtp_receiver_main.cpp
source/apps/rmax_xstream_generic_sender/: CMakeLists.txt  rmax_xstream_generic_sender.cpp  rmax_xstream_generic_sender_main.cpp
source/apps/rmax_xstream_media_sender/: CMakeLists.txt  rmax_xstream_media_sender.cpp  rmax_xstream_media_sender_main.cpp
source/core/: CMakeLists.txt
source/core/chunk/: CMakeLists.txt  generic_chunk.cpp  media_chunk.cpp  receive_chunk.cpp
source/core/flow/: CMakeLists.txt  flow_interface.cpp  four_tuple_flow.cpp  receive_flow.cpp  two_tuple_flow.cpp
source/core/memory_layout/: CMakeLists.txt
source/core/stream/: CMakeLists.txt  aggregate_stream_interface.cpp  single_stream_interface.cpp
source/include/rdk/: facade.h  rivermax_dev_kit.h
source/io_node/: CMakeLists.txt
source/io_node/common/: CMakeLists.txt  checksum_buffer_writer.cpp  generic_buffer_writer.cpp  io_node_memory_utils.cpp  rtp_video_send_stream.cpp
source/io_node/misc/: CMakeLists.txt  generic_latency_io_node.cpp  latency_io_node.cpp  media_latency_io_node.cpp
source/io_node/receivers/: CMakeLists.txt  ipo_receiver_io_node.cpp  receiver_io_node_base.cpp  rtp_receiver_io_node.cpp
source/io_node/senders/: CMakeLists.txt  generic_sender_io_node.cpp  ipmx_sender_io_node.cpp  media_sender_io_node.cpp
source/services/: CMakeLists.txt
source/services/buffer_wr/: CMakeLists.txt  rtp_media_buffer_writer.cpp  rtp_video_buffer_writer.cpp
source/services/cli/: CMakeLists.txt  cli_manager.cpp  options.cpp  validators.cpp
source/services/cpu/: CMakeLists.txt
source/services/error_handling/: CMakeLists.txt  signal_handler.cpp
source/services/legacy_util/: CMakeLists.txt  defs.h  (+6 more)
utests/: CMakeLists.txt
utests/services/: CMakeLists.txt
utests/utils/: CMakeLists.txt
util/: CMakeLists.txt  checksum_header.h  defs.h  fifo.h  gpu.cpp  gpu.h  memory_allocator.cpp  memory_allocator.h  rational.cpp  rational.h  rt_threads.cpp  rt_threads.h  tx_completion_tracker.h
util/CLI/: CMakeLists.txt
util/cuda/: CMakeLists.txt  checksum_kernel.cu  checksum_kernel.h  csc_kernel.cu  csc_kernel.h  csc_server.h  csc_utils.h
util/os/: CMakeLists.txt
(+224 files in other folders)
